Refactor FindCommandParser